--- a/dnmp/docker-compose.yaml
+++ b/dnmp/docker-compose.yaml
@@ -33,6 +33,19 @@ services:
       app_net:
         ipv4_address: 10.10.10.1
     container_name: "dnmp_mysql"
+  redis:
+    # using specified redis conf
+    command: redis-server /usr/local/etc/redis/redis.conf
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - "$PWD/redis/redis.conf:/usr/local/etc/redis/redis.conf"
+      - "$PWD/redis/data:/data"
+    networks:
+      app_net:
+        ipv4_address: 10.10.10.2
+    container_name: "dnmp_redis"
 
 networks:
   app_net:
