combine RUN statements to reduce image size

--- a/dnmp/php/Dockerfile
+++ b/dnmp/php/Dockerfile
@@ -7,6 +7,7 @@ COPY php.ini $PHP_INI_DIR/conf.d/
 RUN docker-php-ext-install mysqli
 
 # install phpredis
-RUN apk add -t .build-deps $PHPIZE_DEPS
-RUN pecl install redis && docker-php-ext-enable redis
-RUN apk del .build-deps
+RUN apk add -t .build-deps $PHPIZE_DEPS \
+ && pecl install redis \
+ && docker-php-ext-enable redis \
+ && apk del .build-deps
