add xdebug extension

--- a/dnmp/php/Dockerfile
+++ b/dnmp/php/Dockerfile
@@ -6,8 +6,8 @@ COPY php.ini $PHP_INI_DIR/conf.d/
 
 RUN docker-php-ext-install mysqli
 
-# install phpredis
+# install pecl extentions
 RUN apk add -t .build-deps $PHPIZE_DEPS \
- && pecl install redis \
- && docker-php-ext-enable redis \
+ && pecl install redis xdebug-2.7.0 \
+ && docker-php-ext-enable redis xdebug\
  && apk del .build-deps
