using php.ini by mount for faster develop

--- a/dnmp/docker-compose.yaml
+++ b/dnmp/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
     ports:
       - "9000:9000"
     volumes:
+      - "$PWD/php/php.ini:/usr/local/etc/php/conf.d/php.ini"
       - "$PWD/src:/var/www/html"
     networks:
       - app_net
