--- a/multi/docker-compose.yaml
+++ b/multi/docker-compose.yaml
@@ -6,32 +6,44 @@ services:
       - "80:80"
     depends_on:
       - "php_latest"
+      - "php_56"
     volumes:
       - "./nginx:/etc/nginx/conf.d"
-      - "../src:/var/www/html"
+      - src:/var/www/html
     networks:
       - app_net
     container_name: "multi_nginx"
+
   php_latest:
     build: ./php
     ports:
       - "9000:9000"
     volumes:
       - "./php/php.ini:/usr/local/etc/php/conf.d/php.ini"
-      - "../src:/var/www/html"
+      - src:/var/www/html
     networks:
       - app_net
     container_name: "multi_php_latest"
+
   php_56:
     image: php:5.6-fpm-alpine
     ports:
       - "9056:9000"
     volumes:
       - "./php/php.ini:/usr/local/etc/php/conf.d/php.ini"
-      - "../src:/var/www/html"
+      - src:/var/www/html
     networks:
       - app_net
     container_name: "multi_php_56"
+
+volumes:
+  src:
+    driver: local
+    driver_opts:
+      type: none
+      device: $PWD/../src
+      o: bind
+
 
 networks:
   app_net:
